@@ -1,3 +1,7 @@
+2008-10-24 Ingo Renner  <ingo@typo3.org>
+
+	* cleanup of the localization manager class
+
 2008-10-21 Frank Naegler  <typo3@naegler.net>
 
 	* refactoring of tx_community_viewhelper_GetCObj
@@ -6,7 +10,7 @@
 
 	* bugfix TS-Viewhelper, it has returned no array data
 	* added new ViewHelper to generate any TS object by calling cObjGetSingle()
-	* revert changes of method getResourceId in the abstract community application controller, because the check for a null user is necessary as there's not always a user. for example on the groupProfile application 
+	* revert changes of method getResourceId in the abstract community application controller, because the check for a null user is necessary as there's not always a user. for example on the groupProfile application
 	* fix method isFriendOfCurrentlyLoggedInUser in AccessManager
 	* localize all ajax messages in tx_community_controller_EditGroupApplication
 
